k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-api
spec:
  type: ClusterIP
  selector:
    app: metrics-api
  ports:
  - port: 80
    targetPort: 5000
